upstream merge: manual: accounting: java: small fixes and code cleanups
Manual merge of minor accounting java fixes and improvements up to
upstream revision 7dc8cc452819:
* numerous NPE direct fixes and preventions
* PaymentGatewayServices: unhardcode payTo "Company" in
processCaptureResult
* PaymentGatewayServices: bugfix unclosed EntityListIterator in
retryFailedAuths, retryFailedAuthNsfs
* close streams with try-with-resources blocks
* localized messages
* fix service error result checking and handling
* code cleanups and formatting
* some extra utility methods added (InvoiceWorker getShippingAddress,
etc.)
* PayflowPro: fix compilation errors

Some changes intentionally skipped:
* some business logic changes
* some Eclipse-caused upstream formatting changes skipped (too ugly,
why?)

Extra changes (Scipio):
* PaymentGatewayServices: fix some bad label resource names (resource vs
resourceError)
* code cleanups and formatting

Upstream-Version-Commit: 7dc8cc4528196c22756bf9d417cde535c4f63a49
Upstream-Repo: https://github.com/apache/ofbiz-framework.git
Upstream-Branch: trunk

Refs https://gitlab.ilscipio.com/scipio-dev/dev/scipioce-dev/issues/556